2009-01-27  Tor Lillqvist  <tml@novell.com>

	Committing this here in the gnome-2-22 branch because this is what
	is still used on Windows without dbus.
	
	* gconf/Makefile.am (gconfd_2_LDFLAGS): Use the -mwindows flag
	when linking on Windows, so that we build a "GUI" executable.

	* gconf/gconfd.c (main): On Windows, with GCONF_DEBUG_OUTPUT set,
	make sure stdout and stderr go somewhere. Use the parent's console
	window if possible, otherwise open an own console window. If we
	had to open an own console window, give the user a chance to read
	the output when exiting. Same idea that has been successfully used
	in GIMP for a while.

2008-05-14  Ray Strode  <rstrode@redhat.com>

	* configure.in: bump glib require to 2.14
	* backends/markup-backend.c (cleanup_timeout),
	(ms_new), (ms_destroy): remove some if 0'd code,
	and drop g_source_remove on non-existant timeout
	to prevent warning

2008-05-07  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_get_daemon_dir):
	* gconf/gconf-sanity-check.c: (check_file_locking):
	Patch from Frederic Crozat to allow override $TMPDIR.
	Closes bug #497113.

2008-05-07  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_notify_listeners): Get
	rid of critical warning (and crash when built with
	--disable-debug), when unsetting a key that has no writable
	sources.

2008-05-07  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/markup-backend.c: (cleanup_timeout), (ms_new):
	* gconf/gconf-database.c: (gconf_database_schedule_sync):
	* gconf/gconfd.c: (gconf_main), (open_append_handle):
	Use new glib api to batch timeouts. Patch from Matthias
	Clasen. Closes bug #531063.

2008-05-07  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_log):
	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses):
	* gconf/gconfd.c: (main): Merge the desyslogification patch
	from Debian. Also used in Fedora now. Closes bug #126468.

2008-03-17  Sven Herzberg  <sven@imendio.com>
